@@ -97,6 +97,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    
+    jvmArgs = [
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED'
+    ]
+    
     testLogging {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
